Update illustration titles

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             <img src="assets/images/illust_1.jpg" alt="Original Illustration" loading="lazy">
                         </div>
                         <div class="card-info">
-                            <h3>Illustration 01</h3>
+                            <h3>Peter</h3>
                             <p>Concept Art</p>
                         </div>
                     </a>
@@ -79,7 +79,7 @@
                             <img src="assets/images/illust_2.jpg" alt="Character Design" loading="lazy">
                         </div>
                         <div class="card-info">
-                            <h3>Illustration 02</h3>
+                            <h3>Festival</h3>
                             <p>Concept Art</p>
                         </div>
                     </a>
@@ -90,7 +90,7 @@
                             <img src="assets/images/illust_3.jpg" alt="Illustration 03" loading="lazy">
                         </div>
                         <div class="card-info">
-                            <h3>Illustration 03</h3>
+                            <h3>Clown</h3>
                             <p>Concept Art</p>
                         </div>
                     </a>
@@ -101,7 +101,7 @@
                             <img src="assets/images/illust_4.jpg" alt="Illustration 04" loading="lazy">
                         </div>
                         <div class="card-info">
-                            <h3>Illustration 04</h3>
+                            <h3>Trophy</h3>
                             <p>Concept Art</p>
                         </div>
                     </a>
