Fix game link behavior (new tab, no lightbox)

--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
 
                 <div class="works-grid">
                     <!-- Item 5: Game -->
-                    <a href="games/my_games_001/index.html" class="work-card" data-category="game">
+                    <a href="games/my_games_001/index.html" class="work-card" data-category="game" target="_blank"
+                        rel="noopener noreferrer">
                         <div class="card-media">
                             <img src="assets/images/games/my_games_001.jpg" alt="くノ一の修行" loading="lazy">
                         </div>
