Enhance game card UI: Add play label and refine overlay behavior

--- a/index.html
+++ b/index.html
@@ -115,10 +115,16 @@
                         rel="noopener noreferrer">
                         <div class="card-media">
                             <img src="assets/images/games/my_games_001.jpg" alt="くノ一の修行" loading="lazy">
+                            <div class="play-overlay">
+                                <span>PLAY GAME</span>
+                            </div>
                         </div>
                         <div class="card-info">
                             <h3>くノ一の修行</h3>
                             <p>Action Game</p>
+                            <p class="play-link"
+                                style="color: #666; font-weight: 700; margin-top: 5px; font-size: 0.9rem;">▶ PLAY GAME
+                            </p>
                         </div>
                     </a>
                 </div>
