--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <header class="site-header">
         <div class="container header-inner">
-            <a href="#" class="brand-logo">PORTFOLIO</a>
+            <a href="index.html" class="brand-logo">PORTFOLIO</a>
 
             <button class="mobile-menu-toggle" aria-label="Toggle Menu">
                 <span class="bar"></span>
@@ -128,6 +128,9 @@
                             </p>
                         </div>
                     </a>
+                </div>
+                <div style="margin-top: 20px; text-align: right; opacity: 0.7; font-size: 0.9rem;">
+                    <a href="credits.html" style="color: inherit; text-decoration: none;">Materials / Credits &rarr;</a>
                 </div>
             </div>
         </section>
